# aitken

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: .gitignore
src/aitken/: __init__.py  __main__.py  cli.py  config.py
src/aitken/core/: __init__.py  problem.py  progression.py  scheduler.py  stats.py
src/aitken/core/generators/: __init__.py  base.py  cubes.py  factorial.py  multidigit.py  squares.py  tables.py  tricks.py
src/aitken/session/: __init__.py  diagnostic.py  drill.py  events.py
src/aitken/storage/: __init__.py  db.py  migrations.py  repositories.py
src/aitken/ui/: __init__.py  plain.py  plot.py
src/aitken/ui/textual/: __init__.py  app.py
src/aitken/ui/textual/screens/: __init__.py  drill.py  menu.py  stats.py
src/aitken/ui/textual/widgets/: __init__.py
tests/: test_cli.py
tests/core/: test_generators.py  test_progression.py  test_scheduler.py  test_squares_cubes_factorial.py  test_stats.py
tests/session/: test_drill.py
tests/storage/: test_repositories.py
tests/ui/: test_plain.py
