[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aitken"
version = "1.0.0"
description = "Treinador CLI de aritmética mental com diagnóstico por latência e repetição espaçada."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pedro Volpi Nacif", email = "pedrovolpinacif@gmail.com" },
]
keywords = ["mental-math", "arithmetic", "spaced-repetition", "cli", "tui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
]
dependencies = [
    "textual>=0.60",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
aitken = "aitken.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aitken"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.mypy]
strict = true
files = ["src/aitken", "tests"]
python_version = "3.14"
